Revert "Fix modal scroll on mobile"
This reverts commit 736848b769f419e9f086a0e497cfe8604a00d4d1.

--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -2,11 +2,9 @@
 
 .content {
   width: 100vw;
-  max-height: 100vh;
   color: var(--green-12);
   background-color: var(--green-2);
   padding: 20px;
-  overflow-y: auto;
 
   .pre {
     margin: 0;
